# ottoneu

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  Untitled Diagram.drawio  constants.py  pyproject.toml
ottoneu/: lineup.py  reports.py  utils.py  valuation.py
